--- a/Finance/Finance/Finance.csproj
+++ b/Finance/Finance/Finance.csproj
@@ -117,7 +117,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="123456789\" />
-    <Folder Include="esraa\" />
+    <Folder Include="esraa000088\" />
     <Folder Include="PL\Genral\" />
     <Folder Include="PL\Print\Add\" />
     <Folder Include="PL\Print\Genral\" />
